crates/quarto-highlight/tests/snapshots/golden__r.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "x <- c(1, 2, 3)\nmean(x)\n"
---
[
  [
    0,
    1,
    "variable"
  ],
  [
    2,
    4,
    "operator"
  ],
  [
    5,
    6,
    "function"
  ],
  [
    6,
    7,
    "punctuation.bracket"
  ],
  [
    7,
    8,
    "number"
  ],
  [
    8,
    9,
    "punctuation.delimiter"
  ],
  [
    10,
    11,
    "number"
  ],
  [
    11,
    12,
    "punctuation.delimiter"
  ],
  [
    13,
    14,
    "number"
  ],
  [
    14,
    15,
    "punctuation.bracket"
  ],
  [
    16,
    20,
    "function"
  ],
  [
    20,
    21,
    "punctuation.bracket"
  ],
  [
    21,
    22,
    "variable"
  ],
  [
    22,
    23,
    "punctuation.bracket"
  ]
]
