crates/quarto-highlight/tests/snapshots/golden__tsx.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "const el: JSX.Element = <div>{x}</div>;\n"
---
[
  [
    0,
    5,
    "keyword"
  ],
  [
    6,
    8,
    "variable"
  ],
  [
    10,
    13,
    "constant"
  ],
  [
    13,
    14,
    "punctuation.delimiter"
  ],
  [
    14,
    21,
    "type"
  ],
  [
    22,
    23,
    "operator"
  ],
  [
    24,
    25,
    "operator"
  ],
  [
    25,
    28,
    "variable"
  ],
  [
    28,
    29,
    "operator"
  ],
  [
    29,
    30,
    "punctuation.bracket"
  ],
  [
    30,
    31,
    "variable"
  ],
  [
    31,
    32,
    "punctuation.bracket"
  ],
  [
    32,
    34,
    "punctuation.bracket"
  ],
  [
    34,
    37,
    "variable"
  ],
  [
    37,
    38,
    "operator"
  ],
  [
    38,
    39,
    "punctuation.delimiter"
  ]
]
