crates/quarto-highlight/tests/snapshots/golden__typescript.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "const add = (a: number, b: number): number => a + b;\n"
---
[
  [
    0,
    5,
    "keyword"
  ],
  [
    6,
    9,
    "function"
  ],
  [
    10,
    11,
    "operator"
  ],
  [
    12,
    13,
    "punctuation.bracket"
  ],
  [
    13,
    14,
    "variable"
  ],
  [
    16,
    22,
    "type.builtin"
  ],
  [
    22,
    23,
    "punctuation.delimiter"
  ],
  [
    24,
    25,
    "variable"
  ],
  [
    27,
    33,
    "type.builtin"
  ],
  [
    33,
    34,
    "punctuation.bracket"
  ],
  [
    36,
    42,
    "type.builtin"
  ],
  [
    43,
    45,
    "operator"
  ],
  [
    46,
    47,
    "variable"
  ],
  [
    48,
    49,
    "operator"
  ],
  [
    50,
    51,
    "variable"
  ],
  [
    51,
    52,
    "punctuation.delimiter"
  ]
]
