crates/quarto-highlight/tests/snapshots/golden__user_grammar_toml.snap
---
source: crates/quarto-highlight/tests/golden.rs
description: "name = \"value\"\ncount = 42\n"
---
[
  [
    5,
    6,
    "operator"
  ],
  [
    7,
    14,
    "string"
  ],
  [
    0,
    14,
    "property"
  ],
  [
    0,
    14,
    "type"
  ],
  [
    21,
    22,
    "operator"
  ],
  [
    23,
    25,
    "number"
  ],
  [
    15,
    25,
    "property"
  ],
  [
    15,
    25,
    "type"
  ]
]
